[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mitosheet_helper_config"
version = "0.0.1"
authors = [
  { name="Aaron Diamond-Reivich", email="aarondr77@gmail.com" },
]
description = "A configuration package for the mitosheet package, available to enterprise users only"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mito-ds/mitosheet_helper_config"
"Bug Tracker" = "https://github.com/mito-ds/monorepo/issues"

[project.optional-dependencies]
dev = [
  'mypy'
]